@@ -53,7 +53,6 @@ setup(
     namespace_packages=['zope', 'zope.app'],
     install_requires=['setuptools',
                       'zope.app.component',
-                      'zope.app.folder',
                       'zope.app.publication',
                       'zope.component',
                       'zope.configuration',
@@ -61,6 +60,8 @@ setup(
                       'zope.error',
                       'zope.event',
                       'zope.interface',
+                      'zope.location',
+                      'zope.site',
                       'zope.security',
                       'zope.traversing',
                       'ZODB3',
